# mdsam

./: 2dir_test_script.py  README.md  pyproject.toml  test_script.py
Modules/: DATA_PROCESS.py  DATA_PROCESS_2.py  Data_plot.py  Main.py  PLOTTING.py  PRINCIPAL 2DIR.py  PT_data_workup_functions.py  Userapp.py  principal.py
Test_files/: 20250312#33.info  20250312#33.wts  20250312#33_T01#001.scan  20250312#33_T01#002.scan  20250312#33_T01#003.scan  20250312#33_T01#004.scan  20250312#33_T01#005.scan  20250312#33_T01#006.scan  20250312#33_T01#007.scan  20250312#33_T01#008.scan  20250312#33_T01#009.scan  20250312#33_T01#010.scan  20250312#33_T02#001.scan  20250312#33_T02#002.scan  20250312#33_T02#003.scan  20250312#33_T02#004.scan  20250312#33_T02#005.scan  20250312#33_T02#006.scan  20250312#33_T02#007.scan  20250312#33_T02#008.scan  20250312#33_T02#009.scan  20250312#33_T02#010.scan  20250312#33_T03#001.scan  20250312#33_T03#002.scan  20250312#33_T03#003.scan  20250312#33_T03#004.scan  20250312#33_T03#005.scan  20250312#33_T03#006.scan  20250312#33_T03#007.scan  20250312#33_T03#008.scan  20250312#33_T03#009.scan  20250312#33_T03#010.scan  20250312#33_T04#001.scan  20250312#33_T04#002.scan  20250312#33_T04#003.scan  20250312#33_T04#004.scan  20250312#33_T04#005.scan  20250312#33_T04#006.scan  20250312#33_T04#007.scan  20250312#33_T04#008.scan  (+62 more)
manual/: 2DIR.md  bigfoot.md  transient_absorption.md
mdsam/: BF.py  BF_plots.py  Data_analysis.txt  Harpia.py  Main screen.py  Phasetech2DIR.py  TA_V2.py  __init__.py  helper_functions.py  phasetech2dir.py
src/mdsam/: BF.py  TA.py  (+7 more)
(+62 files in other folders)
